--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,7 +17,7 @@ postgres = ["sqlx/postgres"]
 [dependencies.sqlx]
 version = "0.7.1"
 default-features = false
-features = [ "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json", "time" ]
+features = [ "runtime-tokio", "macros", "chrono", "uuid", "json", "time" ]
 
 [dependencies]
 ntex = { version = "0.7", features = ["glommio"] }
