--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,8 +11,9 @@ edition = "2021"
 vergen = { version = "8.2.4", features = [ "git" ] }
 
 [features]
-default = ["postgres"]
+default = ["postgres", "cookie"]
 postgres = ["sqlx/postgres"]
+cookie = ["ntex/cookie"]
 
 [dependencies.sqlx]
 version = "0.7.1"
@@ -20,7 +21,7 @@ default-features = false
 features = [ "runtime-tokio", "macros", "chrono", "uuid", "json", "time" ]
 
 [dependencies]
-ntex = { version = "0.7", features = ["glommio"] }
+ntex = { version = "0.7", features = ["glommio", "cookie"]}
 clap =  { version = "4.3.19", features = [ "derive" ] }
 lettre = { version = "0.10.4", features = ["tokio1-native-tls", "hostname", "builder"] }
 nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
@@ -33,6 +34,8 @@ serde_qs = "0.12"
 serde_json = "1.0.104"
 json5 = "0.4.1"
 rust-argon2 = "1.0.0"
+ring = "0.16.20"
+rand = "0.8.5"
 hex = "0.4.3"
 jsonwebtoken = "8.3.0"
 lazy_static = "1.4.0"
@@ -43,3 +46,5 @@ url = "2.4.0"
 itsdangerous = "0.4.1"
 num_cpus = "1.16.0"
 cargo-watch = "8.4.0"
+cookie = "0.17.0"
+rust-analyzer = "0.0.1"
