--- a/backend/.env-example
+++ b/backend/.env-example
@@ -1,1 +1,1 @@
-export DATABASE_URL=postgresql://root@localhost:26257/ferp?sslmode=disable
+export DATABASE_URL=postgresql://postgres@localhost:5432/nferp
