--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -48,3 +48,7 @@ num_cpus = "1.16.0"
 cargo-watch = "8.4.0"
 cookie = "0.17.0"
 rust-analyzer = "0.0.1"
+async-trait = "0.1.73"
+mobc = "0.8.2"
+mobc-redis = "0.8.0"
+base64 = "0.21.3"
