--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,9 +11,8 @@ edition = "2021"
 vergen = { version = "8.2.4", features = [ "git" ] }
 
 [features]
-default = ["postgres", "cookie"]
+default = ["postgres"]
 postgres = ["sqlx/postgres"]
-cookie = ["ntex/cookie"]
 
 [dependencies.sqlx]
 version = "0.7.1"
@@ -21,7 +20,10 @@ default-features = false
 features = [ "runtime-tokio", "macros", "chrono", "uuid", "json", "time" ]
 
 [dependencies]
-ntex = { version = "0.7", features = ["tokio", "cookie"]}
+actix-web = "4.1.0"
+actix-files = "0.6.2"
+actix-rt = "2.9.0"
+actix-cors = "0.6.4"
 clap =  { version = "4.3.19", features = [ "derive" ] }
 lettre = { version = "0.10.4", features = ["tokio1-native-tls", "hostname", "builder"] }
 nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
