--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,11 +21,14 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"flowbite-svelte": "^0.44.15",
+		"flowbite-svelte-icons": "^0.4.3",
 		"postcss": "^8.4.29",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"svelte-sidebar-menu": "^0.9.12",
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
@@ -33,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"cookie": "^0.5.0",
+		"flowbite": "^1.8.1",
 		"jwt-decode": "^3.1.2"
 	}
 }
