--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -20,10 +20,12 @@ default-features = false
 features = [ "runtime-tokio", "macros", "chrono", "uuid", "json", "time" ]
 
 [dependencies]
-actix-web = "4.1.0"
-actix-files = "0.6.2"
-actix-rt = "2.9.0"
-actix-cors = "0.6.4"
+ntex = { version = "0.7", features = ["tokio", "cookie", "compress"]}
+ntex-cors = { version = "0.4.0" }
+#actix-web = "4.1.0"
+#actix-files = "0.6.2"
+#actix-rt = "2.9.0"
+# actix-cors = "0.6.4"
 clap =  { version = "4.3.19", features = [ "derive" ] }
 lettre = { version = "0.10.4", features = ["tokio1-native-tls", "hostname", "builder"] }
 nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
