--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,6 +13,7 @@ vergen = { version = "8.2.4", features = [ "git" ] }
 [features]
 default = ["postgres"]
 postgres = ["sqlx/postgres"]
+cookie = []
 
 [dependencies.sqlx]
 version = "0.7.1"
@@ -20,25 +21,25 @@ default-features = false
 features = [ "runtime-tokio", "macros", "chrono", "uuid", "json", "time" ]
 
 [dependencies]
-ntex = { version = "0.7", features = ["tokio", "cookie", "compress"]}
-ntex-cors = { version = "0.4.0" }
+ntex = { version = "1.0", features = ["tokio", "cookie", "compress"]}
+ntex-cors = { version = "0.5.0" }
 #actix-web = "4.1.0"
 #actix-files = "0.6.2"
 #actix-rt = "2.9.0"
 # actix-cors = "0.6.4"
-clap =  { version = "4.3.19", features = [ "derive" ] }
-lettre = { version = "0.10.4", features = ["tokio1-native-tls", "hostname", "builder"] }
+clap =  { version = "4.4.18", features = [ "derive" ] }
+lettre = { version = "0.11.3", features = ["tokio1-native-tls", "hostname", "builder"] }
 nonblock-logger = { version = "0.2.2", default-features = false, features = ["color", "dbg"] }
-uuid = { version = "1.4.1", features = ["serde", "v4"] }
-chrono =  { version = "0.4.26", features = ["serde"] }
-rust_decimal = { version = "1.31.0", features = [ "serde-float" ] }
+uuid = { version = "1.6.1", features = ["serde", "v4"] }
+chrono =  { version = "0.4.31", features = ["serde"] }
+rust_decimal = { version = "1.33.1", features = [ "serde-float" ] }
 validator = { version = "0.16.1", features = ["derive"] }
-serde = { version = "1.0.183", features = ["derive"] }
+serde = { version = "1.0.195", features = ["derive"] }
 serde_qs = "0.12"
-serde_json = "1.0.104"
+serde_json = "1.0.111"	
 json5 = "0.4.1"
-rust-argon2 = "1.0.0"
-ring = "0.16.20"
+rust-argon2 = "2.1.0"
+ring = "0.17.7"
 rand = "0.8.5"
 hex = "0.4.3"
 jsonwebtoken = "8.3.0"
